--- a/index.html
+++ b/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDo</title>
-    <link rel="icon" href="pencil.png" type="image/x-icon" />
-    <!-- <link rel="stylesheet" href="styles.css" /> -->
-
-    <style></style>
-  </head>
-  <body>
+    <link rel="icon" href="pencil.png" type="image/x-icon">
+    <!-- <link rel="stylesheet" href="styles.css"> -->
+</head>
+<body>
     <!-- Create the rectangle box with text -->
     <div class="container">
-      <h1>Student Management</h1>
-      <hr class="border border-primary border-3 opacity-75">
+        <h1>Student Management</h1>
+        
+        <hr class="border border-primary border-3 opacity-75">
+        <div class="button-container">
+            <button type="button" class="btn1 btn-outline-success" id="addStudentButton"> + Add Students</button>
+            <button type="button" class="btn2 btn-outline-primary" id="viewStudentButton"> View Students</button>
+        </div>
     </div>
 
-    <div>
-        <button id="addStudentButton">+ Add Students</button>
-    </div>
-    <script src="script.js"></script>
+    <!-- Move the button div below the container -->
 
-  </body>
+
+<script src="script.js"></script>
+</body>
 </html>
